output_9.2.148/quda_new_interace.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/9.2.148'
/tmp/quda_new_interace.h-309604.hip:24:5: error: unknown type name 'QudaTwistFlavorType'
    QudaTwistFlavorType twist_flavor;  /**< Twisted mass flavor */
    ^
1 error generated when compiling for host.
Error while processing /tmp/quda_new_interace.h-309604.hip.

[HIPIFY] info: file './quda/include/quda_new_interace.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 0
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 851
  CHANGED lines of code: 1
  TOTAL lines of code: 36
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 3
  TIME ELAPSED s: 0.20
